--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: citation
 Type: Package
 Title: Software citation tools
-Version: 0.1
-Date: 2018-09-05
+Version: 0.2.0
+Date: 2018-09-12
 Authors@R: c(person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")))
 Description: A collection of functions to extract citation information from R packages, extending the functionality already provided by the citation function in the utils package.
-Imports: utils
+Imports: utils, yaml
 URL: https://github.com/pik-piam/citation, https://doi.org/10.5281/zenodo.???
 BugReports: https://github.com/pik-piam/citation/issues
 License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: yes
 RoxygenNote: 6.1.0
-ValidationKey: 17779
+ValidationKey: 355720
