--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: citation
 Type: Package
 Title: Software citation tools
-Version: 0.2.2
-Date: 2019-11-21
+Version: 0.3.0
+Date: 2020-05-07
 Authors@R: c(person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")))
 Description: A collection of functions to extract citation information from R packages, extending the functionality already provided by the citation function in the utils package.
-Imports: utils, yaml
+Imports: utils, yaml, jsonlite, desc
 URL: https://github.com/pik-piam/citation, https://doi.org/10.5281/zenodo.???
 BugReports: https://github.com/pik-piam/citation/issues
 License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: yes
-RoxygenNote: 6.1.1
-ValidationKey: 400862
+RoxygenNote: 7.1.0
+ValidationKey: 551670
