--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: citation
 Type: Package
-Title: Software citation tools
-Version: 0.4.0
-Date: 2020-05-12
+Title: Software Citation Tools
+Version: 0.4.1
+Date: 2020-06-26
 Authors@R: c(person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")))
-Description: A collection of functions to extract citation information from R packages, extending the functionality already provided by the citation function in the utils package.
+Description: A collection of functions to extract citation information from R packages and to deal with files in citation file format (<https://citation-file-format.github.io/>), extending the functionality already provided by the citation function in the utils package.
 Imports: utils, yaml, jsonlite, desc
-URL: https://github.com/pik-piam/citation, https://doi.org/10.5281/zenodo.???
+URL: https://github.com/pik-piam/citation, https://doi.org/10.5281/zenodo.3813429
 BugReports: https://github.com/pik-piam/citation/issues
 License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: yes
 RoxygenNote: 7.1.0
-ValidationKey: 735760
+ValidationKey: 755999
