--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: citation
 Type: Package
 Title: Software Citation Tools
-Version: 0.4.1
-Date: 2020-06-26
+Version: 0.5.0
+Date: 2021-08-26
 Authors@R:
 	c(
 		person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
@@ -16,4 +16,5 @@ License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: yes
 RoxygenNote: 7.1.1
-ValidationKey: 755999
+Suggests: 
+    covr
