--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,5 +16,4 @@ License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: yes
 RoxygenNote: 7.1.2
-Suggests: 
-    covr
+Suggests: covr, testthat
