--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,24 @@
 Package: citation
 Type: Package
 Title: Software Citation Tools
-Version: 0.5.2
-Date: 2021-10-21
-Authors@R:
-	c(
-		person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
-		person("Waldir", "Leoncio", email = "w.l.netto@medisin.uio.no", role = c("aut"))
-	)
+Version: 0.5.3
+Date: 2021-11-29
+Authors@R: c(
+    person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
+    person("Waldir", "Leoncio", email = "w.l.netto@medisin.uio.no", role = c("aut")))
 Description: A collection of functions to extract citation information from 'R' packages and to deal with files in 'citation file format' (<https://citation-file-format.github.io/>), extending the functionality already provided by the citation() function in the 'utils' package.
-Imports: utils, yaml, jsonlite, desc
+Imports:
+    desc,
+    jsonlite,
+    utils,
+    withr,
+    yaml
+Suggests:
+    covr,
+    testthat
 URL: https://github.com/pik-piam/citation, https://doi.org/10.5281/zenodo.3813429
 BugReports: https://github.com/pik-piam/citation/issues
 License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: yes
 RoxygenNote: 7.1.2
-Suggests: covr, testthat
