--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,5 @@ importFrom(utils,bibentry)
 importFrom(utils,citation)
 importFrom(utils,packageDescription)
 importFrom(utils,person)
+importFrom(withr,local_connection)
 importFrom(yaml,read_yaml)
