--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(package2zenodo)
 export(r2cff)
 export(read_cff)
 importFrom(desc,desc)
+importFrom(desc,description)
 importFrom(jsonlite,toJSON)
 importFrom(utils,as.personList)
 importFrom(utils,bibentry)
