--- a/.github/workflows/lucode2-check.yaml
+++ b/.github/workflows/lucode2-check.yaml
@@ -11,7 +11,7 @@ on:
 env:
   USE_BSPM: "true"
   _R_CHECK_FORCE_SUGGESTS_: "false"
-  NO_BINARY_INSTALL_R_PACKAGES: 'c("madrat", "magclass", "citation", "gms", "goxygen", "raster")'
+  NO_BINARY_INSTALL_R_PACKAGES: 'c("madrat", "magclass", "citation", "gms", "goxygen", "GDPuc")'
 
 jobs:
   lucode2-check:
@@ -22,6 +22,9 @@ jobs:
 
       - name: Bootstrap
         run: |
+          sudo chown runner -R .
+          sudo locale-gen en_US.UTF-8
+          sudo add-apt-repository -y ppa:ubuntugis/ppa
           curl -OLs https://eddelbuettel.github.io/r-ci/run.sh
           chmod 0755 run.sh
           ./run.sh bootstrap
@@ -53,11 +56,33 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v1
 
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Cache R libraries
+        uses: pat-s/always-upload-cache@v3
+        with:
+          path: /usr/local/lib/R/
+          key: ${{ runner.os }}-usr-local-lib-R-${{ hashFiles('DESCRIPTION') }}
+          restore-keys: |
+            ${{ runner.os }}-usr-local-lib-R-
+
+      - name: Restore R library permissions
+        run: |
+          sudo chmod 2777 /usr/local/lib/R /usr/local/lib/R/site-library
+
       - name: Install dependencies
         run: |
-          ./run.sh install_aptget libgdal-dev
+          ./run.sh install_aptget libhdf5-dev libharfbuzz-dev libfribidi-dev
           ./run.sh install_all
-          ./run.sh install_r lucode2 covr
+          ./run.sh install_r lucode2 covr rstudioapi
+
+      - name: Install python dependencies if applicable
+        run: |
+          [ -f requirements.txt ] && python -m pip install --upgrade pip wheel || true
+          [ -f requirements.txt ] && pip install -r requirements.txt || true
 
       - name: Remove bspm integration # to get rid of error when running install.packages
         run: |
@@ -77,3 +102,5 @@ jobs:
       - name: Test coverage
         shell: Rscript {0}
         run: covr::codecov(quiet = FALSE)
+        env:
+          NOT_CRAN: "true"
