--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(citation_doi)
 export(package2zenodo)
 export(r2cff)
 export(read_cff)
+export(scanRepos)
 importFrom(desc,desc)
 importFrom(desc,description)
 importFrom(jsonlite,toJSON)
