--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: citation
 Type: Package
 Title: Software Citation Tools
-Version: 0.10.0
+Version: 0.11.0
 Date: 2024-05-17
 Authors@R: c(
-    person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
-    person("Waldir", "Leoncio", email = "w.l.netto@medisin.uio.no", role = c("aut")))
+    person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", 
+    comment = c(affiliation = "Potsdam Institute for Climate Impact Research", ORCID = "0000-0002-4309-6431"), role = c("aut","cre")),
+    person("Waldir", "Leoncio", email = "w.l.netto@medisin.uio.no",
+    comment = c(affiliation = "University of Oslo"), role = c("aut")))
 Description: A collection of functions to extract citation information from 'R' packages and to deal with files in 'citation file format' (<https://citation-file-format.github.io/>), extending the functionality already provided by the citation() function in the 'utils' package.
 Imports:
     desc,
@@ -21,3 +23,4 @@ BugReports: https://github.com/pik-piam/citation/issues
 License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 RoxygenNote: 7.3.1
+Config/Keywords: tool
